test opendata site

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,19 @@
 theme: jekyll-theme-minimal
+title: Open data in education
+defaults:
+    -
+     scope:
+         path: ""
+     values:
+         lang: en
+         base-url: "/"
+    -
+     scope:
+         path: fi
+     values:
+         layout: default_fi
+         lang: fi
+         base-url: "/fi/"
+# languages
+# default langage : "fi" 
+languages: ["fi","en"]
